k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: photosclone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:15
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: photosclone
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
